tests/syntactic/include_directive2/include_directive2.err
Error: cannot find include file "non-existant.dl" in file include_directive2.dl at line 2
.include "non-existant.dl"
---------^-----------------
1 errors generated, evaluation aborted
