tests/syntactic/include_directive2/include_directive2.dl
// try to include a file that does not exist
.include "non-existant.dl"
